third_party/move/move-compiler-v2/tests/reference-safety/v1-tests/dereference_field_invalid.exp

Diagnostics:
error: cannot dereference local `s` which is still mutable borrowed
   ┌─ tests/reference-safety/v1-tests/dereference_field_invalid.move:12:9
   │
11 │         let f = &mut s.f;
   │                 -------- previous mutable field borrow
12 │         *s;
   │         ^^ dereferenced here

error: cannot dereference local `s` which is still mutable borrowed
   ┌─ tests/reference-safety/v1-tests/dereference_field_invalid.move:16:9
   │
15 │         let f = id_mut(&mut s.f);
   │                 ----------------
   │                 │      │
   │                 │      previous mutable field borrow
   │                 used by mutable call result
16 │         *s;
   │         ^^ dereferenced here
